# car-model-app

./: .gitignore  README.md  render.yaml
app/: auth.py
app/routers/: auth.py  chat.py  collections.py  market.py  products.py
backend/: pyproject.toml  pyproject.toml.disable  requirements.txt
backend/app/: auth.py  database.py  main.py  models.py
backend/app/routers/: ai_chat.py  market.py  products.py  wechat.py
backend/scrapers/: products_seed.sql  run_daily_sync.py  taobao_scraper.py  xianyu_scraper.py
frontend/: capacitor.config.json  index.html  package-lock.json  package.json
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/carmodel/app/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/ios/App/App/: Info.plist
frontend/ios/App/App.xcodeproj/: project.pbxproj
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AIChatPanel.jsx  AIFloatingButton.jsx  CollectionCard.jsx  ProductCard.jsx  TabBar.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: ChatList.jsx  ChatRoom.jsx  Collection.jsx  Home.jsx  Login.jsx  Market.jsx  PriceTrend.jsx  ProductDetail.jsx  Profile.jsx  Publish.jsx  WeChatLogin.jsx
frontend/src/store/: useStore.js
