[tool.poetry]
name = "car-model-backend"
version = "1.0.0"
description = "Car Model App Backend"
authors = ["qilixuan"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.6"}
sqlalchemy = "2.0.35"
aiosqlite = "0.20.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.12"
pydantic = "1.10.25"
websockets = "12.0"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
